shared/scss/components/icons.scss
@use '../base/variables' as *;
@use '../base/text-styles';

.icon {
    width: 24px;
    font-size: 24px;
    box-sizing: content-box;
    overflow: hidden;
    white-space: nowrap;
    display: inline;

    &.gray {
        color: $color-gray-dark;
    }

    &.green {
        color: $color-success;
    }

    &.red {
        color: $color-error;
    }

    &.yellow {
        color: $color-warning-primary;
    }

    &.middle {
        vertical-align: middle;
    }

    &:after {
        vertical-align: middle;
    }

    &.add:after {
        font-icon: url('@stamhoofd/assets/images/icons/gray/add.svg');
    }

    &.help:after {
        font-icon: url('@stamhoofd/assets/images/icons/gray/help.svg');
    }

    &.arrow-left:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-left-big.svg);
    }

    &.arrow-right:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-right-big.svg);
    }

    &.clock:after {
        font-icon: url(@stamhoofd/assets/images/icons/gray/clock.svg);
    }

    &.trash:after {
        font-icon: url(@stamhoofd/assets/images/icons/trash.svg);
    }

    &.arrow-right-small:after {
        font-icon: url(@stamhoofd/assets/images/icons/arrow-right-small.svg);
    }

    &.close:after {
        font-icon: url(@stamhoofd/assets/images/icons/close.svg);
    }

    &.more:after {
        font-icon: url(@stamhoofd/assets/images/icons/more.svg);
    }

    &.privacy:after {
        font-icon: url(@stamhoofd/assets/images/icons/privacy.svg);
    }

    &.edit:after {
        font-icon: url(@stamhoofd/assets/images/icons/pencil.svg);
    }

    &.user:after {
        font-icon: url(@stamhoofd/assets/images/icons/user.svg);
    }

    &.card:after {
        font-icon: url(@stamhoofd/assets/images/icons/card.svg);
    }

    &.logout:after {
        font-icon: url(@stamhoofd/assets/images/icons/logout.svg);
    }

    &.settings:after {
        font-icon: url(@stamhoofd/assets/images/icons/settings.svg);
    }

    &.group:after {
        font-icon: url(@stamhoofd/assets/images/icons/group.svg);
    }

    &.success:after {
        font-icon: url(@stamhoofd/assets/images/icons/success.svg);
    }

    &.error:after {
        font-icon: url(@stamhoofd/assets/images/icons/error.svg);
    }

    &.clock:after {
        font-icon: url(@stamhoofd/assets/images/icons/clock.svg);
    }

    &.new:after {
        font-icon: url(@stamhoofd/assets/images/icons/new.svg);
    }

    &.file:after {
        font-icon: url(@stamhoofd/assets/images/icons/file.svg);
    }

    &.lock:after {
        font-icon: url(@stamhoofd/assets/images/icons/lock.svg);
    }

    &.share:after {
        font-icon: url(@stamhoofd/assets/images/icons/share.svg);
    }

    &.info:after {
        font-icon: url(@stamhoofd/assets/images/icons/info.svg);
    }

    &.exclamation:after {
        font-icon: url(@stamhoofd/assets/images/icons/exclamation.svg);
    }

    &.exclamation-two:after {
        font-icon: url(@stamhoofd/assets/images/icons/exclamation-two.svg);
    }

    &.bold:after {
        font-icon: url(@stamhoofd/assets/images/icons/bold.svg);
    }

    &.italic:after {
        font-icon: url(@stamhoofd/assets/images/icons/italic.svg);
    }

    &.underline:after {
        font-icon: url(@stamhoofd/assets/images/icons/underline.svg);
    }

    &.ul:after {
        font-icon: url(@stamhoofd/assets/images/icons/ul.svg);
    }

    &.ol:after {
        font-icon: url(@stamhoofd/assets/images/icons/ol.svg);
    }

    &.link:after {
        font-icon: url(@stamhoofd/assets/images/icons/link.svg);
    }
}

.android-icons {
    .icon {
        &.share:after {
            font-icon: url(@stamhoofd/assets/images/icons/share-android.svg);
        }
    }
}

